kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delavnice
  labels:
    app: delavnice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delavnice
  template:
    metadata:
      labels:
        app: delavnice
    spec:
      containers:
        - name: delavnice
          image: delavnice
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
