kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delavnice
spec:
  selector:
    app: delavnice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
