kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delavnice
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - delavnice.djnd.si
        - delavnice.danesjenovdan.si
      secretName: delavnice-tls
  rules:
    - host: delavnice.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delavnice
                port:
                  number: 80
    - host: delavnice.danesjenovdan.si
      http: *http_paths
